webcleaner (0.48) unstable; urgency=low

  * wc/proxy/dns_lookups.py: reread DNS config every 10 minutes

 -- Bastian Kleineidam <calvin@debian.org>  Sun, 23 Jun 2002 09:35:16 +0200

webcleaner (0.47) unstable; urgency=low

  * wc/parser: fix memory leaks
  * wc/proxy: reset self.attrs in recycled servers; this finally fixes
    the zlib.flush error
  * wc/proxy/HttpServer.py: fix error in reusing HTTP/1.0 connections
    without keep-alive

 -- Bastian Kleineidam <calvin@debian.org>  Sat, 22 Jun 2002 23:40:37 +0200

webcleaner (0.46) unstable; urgency=low

  * webcleaner, wc/daemon: startwatch and stopwatch monitor

 -- Bastian Kleineidam <calvin@debian.org>  Fri, 21 Jun 2002 22:55:23 +0200

webcleaner (0.45) unstable; urgency=low

  * wc/proxy/ClientServerMatchMaker.py: parent proxy authorization
  * wc/parser/: use Python memory management in flex and bison files

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 12 Jun 2002 15:39:13 +0200

webcleaner (0.44) unstable; urgency=low

  * wc/filter/Compress.py: fix for compression of documents not calling
    filter() but only finish() function (zlib.error: -2)
  * add FAQ
  * get rid of 'python2' in rpm build
  * wc/__init__.py: add Compress module to the content-rewriting filters
  * wc/gui/HeaderWindow.py: proxy authorization for wcheaders

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 12 Jun 2002 12:28:31 +0200

webcleaner (0.43) unstable; urgency=low

  * wc/parser/htmllex.l: fix segfault with unterminated end tags
  * wc/gui/ToolApp.py: factorize common app code
  * wc/gui/FXHeaderRuleFrame.py: dont accept empty header name
  * wc/parser/htmlsax.h: add error string
  * wc/parser/htmlparse.y: check error string
  * wc/gui/__init__.py: updated webcleanerconf documentation
  * wc/gui/ConfWindow.py, wc/filter/Rules.py: ground work for rules
    sorting
  * wc/gui/FXRuleTreeList.py: prepend rule type name on tree titles

 -- Bastian Kleineidam <calvin@debian.org>  Sat,  8 Jun 2002 13:56:22 +0200
