@@ -1,6 +1,8 @@
 webcleaner (0.48) unstable; urgency=low
 
-  * wc/proxy/dns_lookups.py: reread DNS config every 10 minutes
+  * wc/proxy/dns_lookups.py: 
+    - reread DNS config every 10 minutes
+    - fall back to TCP for truncated UDP packets
 
  -- Bastian Kleineidam <calvin@debian.org>  Sun, 23 Jun 2002 09:35:16 +0200
 
